<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/btn_cancel_call_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:drawableStart="@drawable/main_btn_close"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:onClick="onClick"
        android:padding="3dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/annuleren_call_dialog"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_call_dialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_call_dialog"
        app:srcCompat="@color/calldialog" />

    <TextView
        android:id="@+id/title_call_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/title_call_dialog_belkosten"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_call_dialog" />

    <TextView
        android:id="@+id/phoneNum_call_dialog_tablet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/main_btn_tel"
        android:drawablePadding="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/phoneNum_call_dialog_tablet"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/text_call_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_call_dialog" />

    <TextView
        android:id="@+id/text_call_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="10"
        android:text="@string/text_call_dialog"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dialog_call_rsr"
        app:layout_constraintEnd_toEndOf="@+id/imageView_call_dialog"
        app:layout_constraintStart_toStartOf="@+id/imageView_call_dialog"
        app:layout_constraintTop_toBottomOf="@+id/title_call_dialog"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_dialog_call_rsr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/main_btn_phone"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:text="@string/btn_dialog_bel_nu"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>